--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="assets/css.style.css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col-12 col-lg-6">
 
-          <img class="position-absolute pos-unset w-50 left-0" src="/assets/img/with dote .png" alt="">
+          <img class="position-absolute top50 pos-unset w-50 left-0" src="/assets/img/with dote .png" alt="">
         </div>
         <div class="col-12 col-lg-6 ">
           <div class="box">
@@ -123,7 +123,7 @@
 
   </section>
 
-  <section class="min-vh-100 d-flex position-relative align-items-center justify-content-center">
+  <section class="min-vh-50 d-flex position-relative align-items-center justify-content-center">
 
     <div class="container">
       <footer>
