--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 
-  <section id="top" class="bg-color min-vh-100 flex-column align-items-center align-content-center d-flex">
+  <section id="top" class="bg-color flex-column align-items-center align-content-center d-flex">
     <header class="container mt-4 ">
       <nav class="d-flex align-items-center justify-content-between">
         <h1 class="chat">chat<span>app</span></h1>
@@ -40,7 +40,7 @@
       </div>
     </header>
     <div class="container justify-content-center">
-      <div class="row">
+      <div class="row pb-100">
         <div class="col-md-6 col-12  d-flex flex-column justify-content-center">
           <div class="col-head">
             <h1 class="have font-50">Have your best chat</h1>
@@ -54,12 +54,12 @@
 
         </div>
         <div class="col-md-6 col-12 ">
-          <img class="w-100" src="assets/img/first img.png" alt="img">
+          <img class="w-100 " src="assets/img/first img.png" alt="img">
         </div>
       </div>
     </div>
   </section>
-  <section class="min-vh-100">
+  <section>
     <div class="container d-flex flex-column  justify-content-center align-items-center">
       <h1 class="text-center mt-90 mb-30 fonts-h1">Instant Team Chats</h1>
       <p class="text-center font-p text-wrap ">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
@@ -74,10 +74,11 @@
       <img class=" chart-1 w-100" src="/assets/img/chart 1.png" alt="">
       <img class="position-absolute dote-2" src="/assets/img/dote-3.png" alt="">
     </div>
+  
   </section>
-  <section class="position-relative bg-color-sky min-vh-100">
+  <section class="position-relative bg-color-sky ">
     <div class="container">
-      <div class="row">
+      <div class="row pb-450 lg-pb-0">
         <div class="col-12 col-lg-6">
 
           <img class="position-absolute top50 pos-unset w-50 left-0" src="/assets/img/with dote .png" alt="">
@@ -91,7 +92,7 @@
               <button class="tab it-free ml-30">Get a Demo</button>
             </div>
             <div class="line mb-4 mt-60"></div>
-            <div class="five-star d-flex">
+            <div class="five-star gap-3 d-flex">
               <div class="svg">
                 <svg width="132" height="20" viewBox="0 0 132 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -112,7 +113,7 @@
                 </svg>
 
               </div>
-              <p class="chatapp"> <span class="bus-52">5,200 businesses </span> use ChatApp <br> and they rate it as
+              <p class="chatapp "> <span class="bus-52">5,200 businesses </span> use ChatApp <br> and they rate it as
                 <span class="bus-52"> 5-stars.</span>
               </p>
             </div>
@@ -126,7 +127,7 @@
   <section class="min-vh-50 d-flex position-relative align-items-center justify-content-center">
 
     <div class="container">
-      <footer>
+      <footer class="position-relative">
         <div class="row">
           <div class="col-12 col-lg-3 d-flex flex-column justify-content-center">
             <div class="box2 ">
@@ -143,27 +144,27 @@
                   <p class="">
                     Help
                   </p>
-                  <a href="/">Support</a>
-                  <a href="/">Knowledgebase</a>
-                  <a href="/">Tutorials</a>
+                  <a class="color" href="/">Support</a>
+                  <a class="color" href="/">Knowledgebase</a>
+                  <a class="color" href="/">Tutorials</a>
                 </div>
               </div>
               <div class=" col-3">
                 <div class="d-flex flex-column">
                   <p class="">Features</p>
-                  <a href="/">Screen Sharing</a>
-                  <a href="/">iOS & Android Apps</a>
-                  <a href="/">File Sharing</a>
-                  <a href="/">User Management</a>
+                  <a class="color" href="/">Screen Sharing</a>
+                  <a class="color" href="/">iOS & Android Apps</a>
+                  <a class="color" href="/">File Sharing</a>
+                  <a class="color" href="/">User Management</a>
                 </div>
               </div>
               <div class="col-3" id="product">
 
                 <div class="d-flex flex-column">
-                  <p class="mb22">Company</p>
-                  <a href="/">About Us</a>
-                  <a href="/">Careers</a>
-                  <a href="/">Contact Us</a>
+                  <p class="mb22 color ">Company</p>
+                  <a class="color"  href="/">About Us</a>
+                  <a class="color" href="/">Careers</a>
+                  <a class="color" href="/">Contact Us</a>
 
                 </div>
 
@@ -172,16 +173,17 @@
 
                 <div class=" d-flex flex-column">
                   <p class="">Company</p>
-                  <a href="mat">info@chatapp.com</a>
-                  <a href="tel:1-800-200-300">1-800-200-300</a>
-                  <a href="/">Help Desk</a>
-                  <a href="/">FAQ</a>
+                  <a class="color" href="mat">info@chatapp.com</a>
+                  <a class="color" href="tel:1-800-200-300">1-800-200-300</a>
+                  <a class="color" href="/">Help Desk</a>
+                  <a class="color" href="/">FAQ</a>
                 </div>
 
               </div>
             </div>
           </div>
         </div>
+        <p class="footer-texts position-absolute ">© Copyright ChatApp Inc.</p>
       </footer>
     </div>
     <a href="#top" id="top"> <img class="position-absolute custam" src="/assets/img/top .png" alt="">
