--- a/index.html
+++ b/index.html
@@ -61,20 +61,23 @@
   </section>
   <section>
     <div class="container d-flex flex-column  justify-content-center align-items-center">
-      <h1 class="text-center mt-90 mb-30 fonts-h1">Instant Team Chats</h1>
-      <p class="text-center font-p text-wrap ">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-        ligula
-        eget
-        dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-        nec, pellentesque eu, pretium quis, sem. Nulla consequat massa.</p>
+      <div class="max-583">
+        <h1 class="text-center mt-90 mb-30 fonts-h1">Instant Team Chats</h1>
+        <p class="text-center font-p text-wrap ">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+          commodo
+          ligula
+          eget
+          dolor. Aenean massa. Cum
+          sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
+          nec, pellentesque eu, pretium quis, sem. Nulla consequat massa.</p>
+      </div>
     </div>
     <div class="container position-relative">
       <img class="position-absolute dote-1" src="/assets/img/dote.png" alt="">
       <img class=" chart-1 w-100" src="/assets/img/chart 1.png" alt="">
       <img class="position-absolute dote-2" src="/assets/img/dote-3.png" alt="">
     </div>
-  
+
   </section>
   <section class="position-relative bg-color-sky ">
     <div class="container">
@@ -162,7 +165,7 @@
 
                 <div class="d-flex flex-column">
                   <p class="mb22 color ">Company</p>
-                  <a class="color"  href="/">About Us</a>
+                  <a class="color" href="/">About Us</a>
                   <a class="color" href="/">Careers</a>
                   <a class="color" href="/">Contact Us</a>
 
