back to top edit

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="have font-50">Have your best chat</h1>
             <p class="mt-3 font-15 mb-60">Fast, easy & unlimited team chat.</p>
           </div>
-          <div class="buttbox gap-3 d-flex ">
+          <div class="buttbox gap-3 d-flex pt-5 ">
             <button class="try-it mb-3 try-it-free">Try it Free</button>
             <button class="try-it Demo">Get a Demo</button>
           </div>
@@ -81,10 +81,10 @@
   </section>
   <section class="position-relative bg-color-sky ">
     <div class="container">
-      <div class="row pb-450 lg-pb-0">
+      <div class="row pb-450 xl-pb-100 lg-pb-0">
         <div class="col-12 col-lg-6">
 
-          <img class="position-absolute top50 pos-unset w-50 left-0" src="/assets/img/with dote .png" alt="">
+          <img class="position-absolute top50 pos-unset lg-pt-50 w-50 left-0" src="/assets/img/with dote .png" alt="">
         </div>
         <div class="col-12 col-lg-6 ">
           <div class="box">
