--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
 
 
 
-  <section id="top" class="bg-color flex-column align-items-center align-content-center d-flex">
+  <section id="top" class="bg-color w-100 h-100 flex-column align-items-center align-content-center d-flex">
     <header class="container mt-4 ">
       <nav class="d-flex align-items-center justify-content-between">
-        <h1 class="chat">chat<span>app</span></h1>
-        <label for="menubar">
+
+        <h1 class="logo-text cursor ">chat<span>app</span></h1>
+
+        <label onclick="navline()" for="menubar">
           <span></span>
           <span></span>
           <span></span>
         </label>
         <input type="checkbox" hidden id="menubar">
-        <ul class="d-flex align-items-center   lg-view gap-5 ">
+        <ul class="d-flex align-items-center p-0 m-0   nav-mobile-viwe gap-5 ">
           <li><a class="home" href="#product">Proudct</a></li>
-          <li><a class="light" href="#">Services</a></li>
-          <li><a class="light" href="#">Contact</a></li>
+          <li><a class="light" href="/">Services</a></li>
+          <li><a class="light" href="/">Contact</a></li>
           <li><a class="light" href="#top">Log In</a></li>
 
 
@@ -42,13 +44,13 @@
     <div class="container justify-content-center">
       <div class="row pb-100">
         <div class="col-md-6 col-12  d-flex flex-column justify-content-center">
-          <div class="col-head">
-            <h1 class="have font-50">Have your best chat</h1>
-            <p class="mt-3 font-15 mb-60">Fast, easy & unlimited team chat.</p>
+          <div class="hero-section-header">
+            <h1 class="hero-section-sub-header font-size-50">Have your best chat</h1>
+            <p class="mt-3 text-white font-size-15 mb-60">Fast, easy & unlimited team chat.</p>
           </div>
-          <div class="buttbox gap-3 d-flex pt-5 ">
-            <button class="try-it mb-3 try-it-free">Try it Free</button>
-            <button class="try-it Demo">Get a Demo</button>
+          <div class=" gap-3 d-flex pt-5 ">
+            <button class="try-it-button mb-3 ">Try it Free</button>
+            <button class="get-a-button Demo">Get a Demo</button>
           </div>
 
 
@@ -73,9 +75,9 @@
       </div>
     </div>
     <div class="container position-relative">
-      <img class="position-absolute dote-1" src="/assets/img/dote.png" alt="">
+      <img class="position-absolute dote-img-1" src="/assets/img/dote.png" alt="">
       <img class=" chart-1 w-100" src="/assets/img/chart 1.png" alt="">
-      <img class="position-absolute dote-2" src="/assets/img/dote-3.png" alt="">
+      <img class="position-absolute dote-img-2" src="/assets/img/dote-3.png" alt="">
     </div>
 
   </section>
@@ -84,15 +86,16 @@
       <div class="row pb-450 xl-pb-100 lg-pb-0">
         <div class="col-12 col-lg-6">
 
-          <img class="position-absolute top50 pos-unset lg-pt-50 w-50 left-0" src="/assets/img/with dote .png" alt="">
+          <img class="position-absolute top-6 pos-unset w-lg-100 w-md-100 lg-pt-50 w-50 left-0" src="/assets/img/with dote .png"
+            alt="">
         </div>
         <div class="col-12 col-lg-6 ">
           <div class="box">
             <h1 class="mb-4 mt-119">Perfect Solution for <br> Small Businesses</h1>
             <p class="">Pricing plans that fit like a glove.</p>
-            <div class="buts gap-3 mt-60">
-              <button class="tab it-free">Try it Free</button>
-              <button class="tab it-free ml-30">Get a Demo</button>
+            <div class="flex-column flex-md-row mb-10 gap-3 mt-60">
+              <button class="try-it-sm-button">Try it Free</button>
+              <button class="get-a-sm-button ml-30">Get a Demo</button>
             </div>
             <div class="line mb-4 mt-60"></div>
             <div class="five-star gap-3 d-flex">
@@ -116,8 +119,9 @@
                 </svg>
 
               </div>
-              <p class="chatapp "> <span class="bus-52">5,200 businesses </span> use ChatApp <br> and they rate it as
-                <span class="bus-52"> 5-stars.</span>
+              <p class="chatapp "> <span class="five-star-bold">5,200 businesses </span> use ChatApp <br> and they rate
+                it as
+                <span class="five-star-bold"> 5-stars.</span>
               </p>
             </div>
           </div>
@@ -134,8 +138,8 @@
         <div class="row">
           <div class="col-12 col-lg-3 d-flex flex-column justify-content-center">
             <div class="box2 ">
-              <p class="app-chat tac">chat <span class="appp">app </span></p>
-              <p class="footer-fonts tac">
+              <p class="app-chat text-lg-center">chat <span class="appp">app </span></p>
+              <p class="footer-fonts text-lg-center">
                 The last team chat you <br> will ever need. </p>
             </div>
           </div>
@@ -189,12 +193,17 @@
         <p class="footer-texts position-absolute ">© Copyright ChatApp Inc.</p>
       </footer>
     </div>
-    <a href="#top" id="top"> <img class="position-absolute custam" src="/assets/img/top .png" alt="">
+    <a href="#top" id="top"> <img class="position-absolute  custam" src="/assets/img/top .png" alt="">
     </a>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    <script>
+      const navline = () =>{
+        // document.body.classList.toggle("position-fixed") 
+      }
+    </script>
 </body>
 
 </html>
