img name  change

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
           <li><button>Try It Free</button></li>
         </ul>
-        </ul>
+
       </nav>
-      </div>
+
     </header>
     <div class="container justify-content-center">
       <div class="row pb-100">
@@ -56,7 +56,7 @@
 
         </div>
         <div class="col-md-6 col-12 ">
-          <img class="w-100 " src="assets/img/first img.png" alt="img">
+          <img class="w-100 " src="assets/img/hero-section-img.png" alt="img">
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
     </div>
     <div class="container position-relative">
       <img class="position-absolute dote-img-1" src="/assets/img/dote.png" alt="">
-      <img class=" chart-1 w-100" src="/assets/img/chart 1.png" alt="">
+      <img class=" chart-1 w-100" src="/assets/img/chat-img.png" alt="">
       <img class="position-absolute dote-img-2" src="/assets/img/dote-3.png" alt="">
     </div>
 
@@ -86,7 +86,7 @@
       <div class="row pb-450 xl-pb-100 lg-pb-0">
         <div class="col-12 col-lg-6">
 
-          <img class="position-absolute top-6 pos-unset w-lg-100 w-md-100 lg-pt-50 w-50 left-0" src="/assets/img/with dote .png"
+          <img class="position-absolute top-6 pos-unset w-lg-100 w-md-100 lg-pt-50 w-50 left-0" src="/assets/img/overflow-img.png"
             alt="">
         </div>
         <div class="col-12 col-lg-6 ">
@@ -193,17 +193,13 @@
         <p class="footer-texts position-absolute ">© Copyright ChatApp Inc.</p>
       </footer>
     </div>
-    <a href="#top" id="top"> <img class="position-absolute  custam" src="/assets/img/top .png" alt="">
+    <a href="#top" id="top"> <img class="position-absolute  custam" src="/assets/img/back-to-top.png" alt="">
     </a>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <script>
-      const navline = () =>{
-        // document.body.classList.toggle("position-fixed") 
-      }
-    </script>
+    
 </body>
 
 </html>
